Updated project fixed one of the project cover and ratio of project covers

--- a/index.css
+++ b/index.css
@@ -1716,9 +1716,7 @@ body.menu-lock {
         padding: 16px;
     }
 
-    .work-cover-card {
-        height: 180px !important;
-    }
+
     
     .work-snap-title {
         font-size: 1.4rem !important;
